--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
     <link href="resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <div class="header">
-      <img src="resources/images/img-myt-logo.jpg" />
-      <h3>My Times </h3>
+    <header>
+      <div class="logo">
+        <img src="resources/images/img-myt-logo.jpg" />
+        <h3>My Times </h3>
+      </div>
       <nav>
-        <ul>
-          <li><a href="#">World</a></li>
-          <li><a href="#">U.S.</a></li>
-          <li><a href="#">Tech</a></li>
-          <li><a href="#">Science</a></li>
-        </ul>
+        <span><a href="#">World</a></span>
+        <span><a href="#">U.S.</a></span>
+        <span><a href="#">Tech</a></span>
+        <span><a href="#">Science</a></span>
       </nav>
     </div>
+  </header>
 
   </body>
 </html>
