--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <span><a href="#">Tech</a></span>
         <span><a href="#">Science</a></span>
       </nav>
-    </div>
-  </header>
+    </header>
+    <div
 
   </body>
 </html>
