Pretty close to finished.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <img src="resources/images/img-news-bite.png">
         </div>
         <div class="side-column">
-          <h3>News Bites </h3>
+          <h3>NEWS BITES </h3>
           <span>Cat Emoji Goes Viral </span>
           <span>Buy Youtube Views </span>
           <span>Home Business Advertising Ideas </span>
@@ -82,5 +82,19 @@
         </div>
       </div>
     </div>
+    <footer>
+      <div class="information">
+        <span id="title">My Times </span>
+        <nav>
+          <span><a href="#">World</a></span>
+          <span><a href="#">U.S.</a></span>
+          <span><a href="#">Tech</a></span>
+          <span><a href="#">Science</a></span>
+        </nav>
+      </div>
+      <div class="copyright">
+        <span> (C)2016, My Times (A Division of Codecademy bite)
+      </div>
+    </footer>
   </body>
 </html>
