--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img src="resources/images/img-myt-logo.jpg" />
         <h3>My Times </h3>
       </div>
-      <nav>
+      <nav id="nav-header">
         <span><a href="#">World</a></span>
         <span><a href="#">U.S.</a></span>
         <span><a href="#">Tech</a></span>
@@ -85,7 +85,7 @@
     <footer>
       <div class="information">
         <span id="title">My Times </span>
-        <nav>
+        <nav id="nav-footer">
           <span><a href="#">World</a></span>
           <span><a href="#">U.S.</a></span>
           <span><a href="#">Tech</a></span>
@@ -93,7 +93,7 @@
         </nav>
       </div>
       <div class="copyright">
-        <span> (C)2016, My Times (A Division of Codecademy bite)
+        <span> &copy; 2016, My Times (A Division of Codecademy bite)
       </div>
     </footer>
   </body>
