--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         </div>
       </div>
     </div>
+<!--FOOTER-->
     <footer>
       <div class="information">
         <span id="title">My Times </span>
